--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@ about: 'about.html'
 <header class="main-header {% if page.cover %}" style="background-image: url({{ page.cover }}) {%else%}no-cover{% endif %}">
     <nav class="main-nav overlay clearfix">
             {% if page.logo %}
-                <a class="blog-logo" href="{{ site.baseurl }}">
+                <a class="blog-logo" href="{{ "/" | relative_url }}">
                     <img src="{{ page.logo }}" alt="Blog Logo" />
                 </a>
             {% endif %}
-        <a class="subscribe-button icon-feed" href="{{ site.baseurl }}feed.xml">RSS</a>
+        <a class="subscribe-button icon-feed" href="{{ "/" | relative_url }}feed.xml">RSS</a>
     </nav>
     <div class="vertical">
         <div class="main-header-content inner">
